--- a/popup.html
+++ b/popup.html
@@ -82,6 +82,13 @@
 </div>
 
 <div class="section">
+    <h3>🔑 Token管理</h3>
+    <button id="fetchToken">📡 获取Access Token</button>
+    <input type="text" id="accessToken" placeholder="Access Token (自动获取)" readonly>
+    <div id="tokenStatus"></div>
+</div>
+
+<div class="section">
     <h3>📋 表格操作</h3>
     <input type="text" id="bridgeBaseUrl" placeholder="桥接基础URL" value="https://kfcv50.link">
     <input type="text" id="bridgeName" placeholder="桥接名称" value="KFC V50 API 一键对接">
